# llvm-project

./: gen_proj.bat
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/mojang-checker/: CMakeLists.txt
clang-tools-extra/mojang-checker/tool/: CMakeLists.txt  Mojang-Checker.cpp
clang-tools-extra/mojang-checker/tool/checker/: action.h  finder.h  visitor.h
clang/include/clang/Basic/: Attr.td
clang/lib/Sema/: SemaDeclAttr.cpp
llvm/include/llvm/Transforms/Utils/: MojangTransformPassTest.h
llvm/lib/Analysis/: CallGraph.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/Utils/: CMakeLists.txt  MojangTransformPassTest.cpp
mojang/experiments/custom-attr/: main.cpp
mojang/experiments/test-matcher-1/: clang-query-main.sh  compile-to-ir.sh  dump-ast.sh  dump-callgraph-txt.sh  gen_svg_from_cpp.sh  main.cpp
